# empty_type

./: Cargo.toml  LICENSE  README.md
crates/empty_type/: Cargo.toml
crates/empty_type/src/: lib.rs
crates/empty_type_derive/: Cargo.toml  README.md
crates/empty_type_derive/src/: attribute.rs  fields.rs  lib.rs  type_information.rs
crates/empty_type_derive/tests/: base_cases.rs  default.rs  serde.rs  serde_borrow.rs  serde_default.rs  vis.rs
crates/empty_type_traits/: Cargo.toml
crates/empty_type_traits/src/: empty.rs  fallible.rs  lib.rs  optional.rs
