[package]
name = "empty_type_derive"
version = "0.1.0"
authors = ["Kevin Velasco <me@kvnvelasco.com>"]
keywords = ["serde", "proc_macro", "procmacro", "optional"]
license = "MIT OR Apache-2.0"

edition = "2018"

description = """
Converting between types and their optional counterparts
"""

categories = [
    'encoding',
]


[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ['full']}
empty_type_traits = { path = "../empty_type_traits", version = "0.1.0"}

serde = { version = "1", optional = true }

[dev-dependencies]
serde_json  = "1"

[features]
serde = ["dep:serde", "serde/derive", "empty_type_traits/serde"]
