[package]
name = "empty_type_derive"
version = "0.2.2"
authors = ["Kevin Velasco <me@kvnvelasco.com>"]
keywords = ["serde", "proc_macro", "procmacro", "optional"]
edition = "2018"

description = """
Converting between types and their optional counterparts
"""

readme = "./README.md"
license = "Apache-2.0"
license-file = "./LICENSE"

categories = [
    'encoding',
]


[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ['full', 'extra-traits']}
empty_type = { path = "../empty_type_traits", version = "0.2.1", package = "empty_type_traits" }

serde = { version = "1", optional = true }

[dev-dependencies]
serde_json  = "1"
serde = { version = "1" }

[features]
serde = ["dep:serde", "serde/derive", "empty_type/serde"]
