[package]
name = "empty_type_traits"
version = "0.2.1"
edition = "2021"
description = """
Converting between types and their optional counterparts
"""

license = "Apache-2.0"
license-file = "./LICENSE"

keywords = ['serde', 'serialization', 'optional']

categories = [
    'encoding',
]

license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde", "serde/derive"]